Wed Jul  7 15:04:37 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/OEP/BasicSP/descriptors/test.rtd: 
	* examples/OEP/BasicSP/descriptors/svcmap.dat: 
	* examples/OEP/BasicSP/descriptors/RTsvc.conf: 
	* examples/OEP/BasicSP/descriptors/BasicSP-rt.cad: 

	  Added these files to be used in RT version of BasicSP.
	
	* examples/OEP/BasicSP/NOTE.txt: 
	
	  Updated notes on how to run with RTComponentServer.
	
Wed Jul  7 14:35:33 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* docs/static_ciao_contents.html: 
	* docs/static_config_example.html: 
	* docs/static_config_rtexample.html: 

	  Updated documentation for CIAO Static configurator.

Wed Jul  7 12:22:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h:
        * DAnCE/RepositoryManager/Repository_Manager.cpp:
        * DAnCE/RepositoryManager/Update_Plan.cpp:
        * DAnCE/RepositoryManager/Repository_Manager_conf.h:

          Addressed Ossama Othman's code review comments.
          Thanks Ossama.

Wed Jul  7 11:42:15 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/TODO.html:
	  Some cosmetic changes.

Wed Jul  7 10:42:19 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/releasenotes/switch.html:
	* docs/releasenotes/index.html:

	  Updated the file to follow the directory change for DAnCE.
	  Updated the link to the TODO list.

Wed Jul  7 09:53:56 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* docs/TODO.html:

  	  Overhauled the TODO completely keeping in mind the latest
	  thoughts and forces.

	* docs/todo.html:

	  Removed this from th erepository.

Tue Jul  6 18:05:35 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAO-INSTALL.html:

	  Did a massive update to this since it was woefully outdated.

Tue Jul  6 14:34:16 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

 	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
