@@ -1,453 +1,125 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- $Id$ -->
-<html> <head>
-<title>CIAO Release Information and TODOs</title>
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.79 [en] (Windows NT 5.0; U) [Netscape]">
+   <title>CIAO Release Information and TODO List</title>
 </head>
+<body text="#000000" bgcolor="#FFFFFF">
+<!-- $Id$ -->
+<center>
+<hr></center>
 
-<body>
-<h1>CIAO Release Information and TODOs</h1>
+<center>
+<h3>
+Release Information for the Component Integrated ACE ORB (CIAO)</h3></center>
+This document contains information on the following topics related to the
+<a href="../../VERSION">current
+release</a> of <a href="http://www.dre.vanderbilt.edu/CIAO">CIAO</a>:
 
+<table BORDER=0 CELLSPACING=0 CELLPADDING=10 >
+<tr>
+<td VALIGN=TOP>
+<b></b>
+<br>
 <ul>
-  <li><a href="#status">Current Status</a>
-  <li><a href="#outlook">Project Outlook</a>
-  <li>Short-term <a href="../TODO.html">to-do list</a></p>
+<li>
+<a href="../index.html">Introduction</a></li>
+<li>
+<a href="#status">Current Status of CIAO</a></li>
+<li>
+<a href="dance.html">Status of DAnCE</a></li>
+<li>
+<a href="../TODO.html">TODO list</a></li>
 </ul>
+</td>
+</table>
+
 
 <hr>
 <h2>Current Status</h2><a name="status">
-
 <ol>
-  <li><h3>Latest News</h3>
-      <ul>
-      <li>
-         Mon Jun 28 2004 - The first cut of the new <strong>DnC</strong> specificication
-         implementation is finished. The first cut includes two parts:
-	 <ul>
-         <li>
-	    A modeling tool chain , <a href="http://www.dre.vanderbilt.edu/CoSMIC/">
-	    CoSMIC</a>, which is capable of describing the Assembly/Component
-	    using <a href="http://www.isis.vanderbilt.edu/Projects/gme/default.html">
-	    GME</a> as the development bed.
-	    The artifacts generated from the CoSMIC are a set of XML descriptors.
-         <li>
-	    A run-time infrastructure that performs the actual deployment and
-	    configuration, with a superset of the capabilities described in OMG
-	    DnC specification with CIAO extension. The implementation source code
-	    could be fount in <a href="../../DAnCE"> this directory </a>.<p><p>
+<li>The first cut of the new <a
+  href="http://www.omg.org/cgi-bin/doc?ptc/2003-07-02"> DnC </a>
+  specification implementation, which we call DAnCE is available in
+  this distribution. DAnCE is housed under <CODE> $CIAO_ROOT
+  </CODE>. We plan to enhance DAnCE in the next few months. We believe
+  DAnCE will replace existing tool sets in <CODE>
+  $CIAO_ROOT/tools</CODE>. There are a few features in
+  <CODE>$CIAO_ROOT/tools</CODE> that are missing in the DAnCE
+  implementation. Please see <a href="../TODO.html"> TODO </a> file
+  for more details. We plan to implement them soon and use DAnCE
+  continuously. 
 
-	    In the new DnC run-time framework we have migrated all the
-	    functionalities presented in the old CIAO runtime except the
-	    Real-Time configuration and Static Configuration, which are
-	    developed by Washington University in St. Louis. Currently,
-	    the two CIAO runtime co-exist in our source and the component
-	    implementation could be used with both framework without much
-	    change. (For the change that one has to go through please
-	    read <a href="./switch.html">this</a>.)<p>
-	  <li>
-	    Here is a set of updates in the CIDL Compiler.<p>
-	    <ul>
-	        <li>Fixed bugs in generation of inherited: home operations,
-		    attribute operations, port operations, home factory
-		    operations, supported operationsa.<p>
+ <li> The first cut of DAnCE includes two parts:  
+  <ul>
+  <li>
+  A modeling tool chain , <a href="http://www.dre.vanderbilt.edu/CoSMIC/">
+  CoSMIC</a>, which is capable of describing the Assembly/Component 
+  using <a
+  href="http://www.isis.vanderbilt.edu/Projects/gme/default.html">
+  GME</a> as the development bed. The artifacts generated from the
+ CoSMIC are a set of XML descriptors. 
 
-		 <li>Added support for multiplex uses ports.<p>
+  <!-- Tao, I realy don't understand what this means - Bala -->
+  <li>This run-time infrastructure that performs the actual deployment
+  and  configuration, with a superset of the capabilities described in
+  OMG DnC specification with CIAO extension.  </a>.<p><p>
 
-		 <li>Added automatic registration of value factories for
-		     event consumers.<p>
+  </ul>
+  <!-- Tao, can you please see whether this is needed -->
+  In the new DnC run-time framework we have migrated all the
+  functionalities present in the old CIAO runtime except the
+  Real-Time configuration and Static Configuration, which are
+  developed by Washington University in St. Louis. Currently,
+  the two CIAO runtime co-exist in our source and the component
+  implementation could be used with both framework without much
+  change. (For the change that one has to go through please
+  read <a href="./switch.html">this</a>.)<p>
 
-		 <li>Added support for emits-related navigation.<p>
 
-		 <li>Fixed bug with multiple facets in a build that provide
-		     the same interface.<p>
 
-		 <li>Implemented get_all_facets() and get_all_consumers()
-		     navigation methods.
-	     </ul>
-	  </ul>
-      </ul>
+  <li> Two operations <CODE> ciao_preactivate ()</CODE> and
+  <CODE>ciao_postactivate ()</CODE> have been added to the
+  <CODE>SessionComponent</CODE> interface. This implies that component
+  developers have to implement those operations within the
+  executor. We plan to get around this, i.e., users having to
+  implement these two operations, in the next month or so. <p>
+  
+  <li>
+        
+  Here is a set of updates in the CIDL Compiler.<p>
+  <ul>
+  <li>Fixed bugs in generation of inherited: home operations,
+  attribute operations, port operations, home factory   operations,
+  supported operations.<p> 
 
-      <br>
+  <li>Added support for multiplex uses ports. This implies that users
+  could use "uses multiple" in their component definitions. <p>
 
-      <ul>
-        <li>Sun Aug 24 2003 - The first phase of RT support extension
-            is complete.  The RT extension enables developers to
-            specify RT policy on a per component installation basis
-            (per home, and the component created form the home).  The
-            extension includes the following major features:
-            <ul>
-              <li>A real-time ComponentServer:  A real-time
-                  ComponentServer is capable of hosting real-time
-                  Container for components in real-time applications.
-                  To use the real-time ComponentServer, simply tell
-                  CIAO_Daemon to use the RTComponentServer via the
-                  '-n' flag.
+  <li>Added automatic registration of value factories for  event
+  consumers. This has been long outstanding. This change alleviates
+  component developers need to register the valuetype factory of their
+  eventtypes with the ORB. <p>  
 
-              <li>RT extension for assembly descriptors (defined in
-                  .cad files) to specify component installations to RT
-                  policy sets defined in CIAO's real-time descriptors
-                  (defined in CIAO's .rtd files.)  DTD definitions for
-                  .rtd files can be found in <a
-                  href="../XML/ciao_rt_cad_ext.dtd">this file</a>.  An
-                  example .cad file that uses the RT extension and an
-                  example .rtd file that provides RT policy
-                  definitions can be found at:
-                  <pre><code>
-     $(CIAO_ROOT)/examples/OEP/Display/descriptors/HUDisplay-rtcad.cad
-     $(CIAO_ROOT)/examples/OEP/Display/descriptors/test.rtd
-                  </code></pre>
-            </ul>
+  <li>Added support for emits keyword and we now generate navigation
+  code for this.<p>
 
-            More documentation and comprehensive
-            examples/tests/benchmark results for CIAO's RT extension
-            will be added shortly.
-            <p>
+  <li>Fixed bug with multiple facets in a build that provide the same
+  interface.<p> 
 
-        <li>Thu Jul 31 2003 - Arvind and Diego are starting to work on
-            benchmarking and comparing the performance of CIAO and
-            TAO.  These performance test programs are available in
-            <a href="../../performance-tests/Benchmark/">the repository
-            </a><p>
+  <li>Implemented get_all_facets() and get_all_consumers() navigation
+      methods. 
+  </ul>
+  <p>
 
-        <li>Thu Jul 24 2003 - Bala and George are starting to work on a container
-            mediated event delivering support.  This will allow developers
-            to specify the event deliverying strategy and the degree
-            of QoS.  The fist task is to integrate TAO's event channel
-            into the container framework.<p>
 
-        <li>Tue Jun  3 2003 - The first Alpha release of CIAO is now
-            available with ACE/TAO beta kit.<p>
-
-        <li>Mon Jun  2 2003 - We now have a CIDL compiler.  Check
-            out its <a href="../../CIDLC/README">README</a> file for more
-            information.  Examples are also moved to <a
-            href="../../examples/OEP/">here</a> to use the new CIDL
-            compiler to generate servant glue code.<p>
-
-        <li>Thu Apr 16 2003 - The HUDisplay example now also works on
-            Linux platforms and allows you to remotely setup an
-            application. <p>
-
-        <li>Sat Apr  5 2003 - Added the support for connection
-            establishment and finished the multiple-component
-            <a href="../../examples/OEP/Display/"> HUDisplay
-            example</a>.  Check out the <a
-            href="../../examples/OEP/Display/descriptors/NOTE.txt">
-            note </a> to see how to play with it.  You need to
-            have <a href="http://www.trolltech.com/">Qt</a> library
-            available if you want to play with the GUI based
-            component.  If you don't, no worries.  You can still play
-            with the non-GUI configurations.<p>
-
-        <li>Thu Apr  3 2003 - Added the XML documents handlers for
-            componentassembly.  They build the assembly specification
-            that the assembly mechanisms use to compose an
-            application.  As with handlers for parsing softpkg
-            documents, these handlers do not have robust error
-            handling capability as they assume a validator in ACEXML
-            parser handles the validity of documents already (which
-            isn't the case for the time being.)<p>
-
-        <li>Fri Mar 21 2003 - Finished the component implementations
-            for the multi-component example.  Next up, assembling
-            mechanism. <p>
-
-        <li>Thu Mar 6 2003 - The HelloWorld now uses the new command
-            Daemon control options to read in the component softpkg
-            descriptor, spawn a ComponentServer, and instantiate the
-            component.  See the <code>
-            <a href="../../examples/Hello/run_test.pl">
-            run_test.pl</a></code> for more details on how this can be
-            done. <p>
-
-        <li>Sun Feb 16 2003 - A new implementation for the per-host
-            daemon process is now availabe under <code>
-            $(CIAO_ROOT)/tools/Daemon/</code>.  This application
-            includes both <code> ComponentInstallation</code> and
-            <code>ServerActivator</code> interfaces.  It also comes
-            with a command line utility program to interact with the
-            daemon process.  Please see its <a
-            href="../../tools/Daemon/README">README</a> file for more
-            information.<p>
-
-            Implementation for <code>ComponentInstallation</code>
-            interface uses ACE_Configuration to maintain persistency
-            of component intallation data. <p>
-
-        <li>Fri Feb 14 2003 - We now have most of the assembly and
-            deployment framewok processes available.  Next up,
-            implementing the XML
-            handlers that actually parses component assemblies and
-            assembles an application.<p>
-
-        <li>Sun Feb  9 2003 - Started implementing the Deployment and
-            Assembly framework a week ago.  So far, the object
-            management mechanisms for AssemblyFactory and Assembly is
-            done, but I still need to fill in the meat where we build an
-            Assembly by parsing the Assembly descriptor.  I'm going to
-            move on to finish the implementations for the rest of the
-            Deployment and Assembly interfaces in the next few days.<p>
-
-            <b>It looks like we will have to go straight to our
-            planned 0.2 release as our first publically available
-            CIAO. </b><p>
-
-        <li>Mon Jan 13 2003 - Finished the first round effort to
-            create a meta-code to describe how the CIDL compiler
-            should generated the container specific glue code.  These
-            templates are available <a href="../templates/">here</a>.
-            These templates can also be used to help handcrafting the
-            examples I'm working on.<p>
-
-        <li>Mon Jan 6 2003 - Both Jeff and Boris are working on the
-            CIDL compiler implementation.<p>
-
-        <li>Tue Dec 24 2002 - Started working a multi-component
-            handcrafted example in <a
-            href="../../examples/OEP/Display/">examples/OEP/Display/</a><p>
-
-        <li>Sat Dec 21 2002 - Added *nix Makefiles, MPC specifications
-            and created MPC templates for CIAO clients, component
-            implementations, and server tools.<p>
-
-        <li>Wed Dec 18 2002 - A perl script fits beautifully with the
-            HelloWorld example.<p>
-
-        <li>Dec 17 2002 - A NameService based HomeFinder
-            implementation -- CIAO::HomeRegistrar -- is now
-            available.  The simple component server in CIAO now use
-            the support the HomeFinder interface so we can install as
-            many components in the component server as possible.<p>
-
-        <li>Dec 15 2002 - Generic component server that can host
-            multiple components with a proprietary config file.  More
-            information can be found <a
-            href="../../tools/Simple_Component_Server/README"> here </a>
-            Next up, a trivial HomeFinder interface that can
-            simply forward requests to a Naming Service.<p>
-
-        <li>Dec 11 2002 - The server implementation in the HelloWorld
-            example is now a generic one-component server.  It can be
-            modified easily to host any *one* component easily.<p>
-
-        <li>Dec 10 2002 - <a href="com-impl.html">This document</a>
-            captures how to "handcraft" a component and how this all
-            will be automated in the future.<p>
-
-        <li>Nov 22 2002 - Completed the first handcrafted example
-            <a href="../../examples/Hello/README">HelloWorld</a>
-            component implementation.  CIAO now also include a
-            minimally functioning session container implementation.<p>
-      </ul>
-
-  <li> <h3>Status of individual modules</h3>
-<table valign="top" border="1" width="90%">
-  <th> Modules </th>
-  <th> Status </th>
-
-  <tr>
-    <td>CCM Core</td>
-    <td>We are currently working on a prototype that enables remote
-        component installation using the CCM
-        <code>ComponentInstallation</code> interface, a component
-        server implementation.  Since we
-        still don't have a CIDL implementation, we will also write up
-        an example to show how the code should be generated in both
-        CCIDL compiler and provide example component
-        implementations.
-
-        There exists 3 libraries in CCM Core.
-        <ol>
-          <li><b>CIAO_Client</b>: contains the client side stubs for
-              CCMObject.  All client programs that use CCMObject must
-              link to this library.
-          <li><b>CIAO_Container</b>: contains the interface
-              definitions and CIAO's container implementation.  All
-              component implementations must link to this library.
-          <li><b>CIAO_Server</b>: contains the stubs to access
-              deployment framework.  We'll need to use this to
-              implement the deployment mechanism.
-        </ol>
-    </td>
-  </tr>
-
-  <tr>
-    <td>TAO_IDL</td>
-    <td>TAO_IDL has been extended to handle and generate all the
-        component related keywords but <code>import</code>.  We are
-        currently using the generated mapping, in combination to
-        manually simulation of CIDL generated code to implement CCM
-        component.
-        TAO_IDL Check out <a
-        href="http://cvs.doc.wustl.edu/ace-latest.cgi/ACE_wrappers/TAO/docs/releasenotes/index.html#idl"> TAO IDL compiler</a> for more details.
-    </td>
-  </tr>
-
-  <tr>
-    <td>CIDL (Component Implementation Defintion Language) Compiler</td>
-    <td>
-		An implementation that supports a subset of CIDL appropriate for
-		DRE systems has been implemented.
-        We do not have immediate plans to integrate
-        Persistence State Service into the CIAO CIDL compiler. At present
-        we support only a simple construct like the following:
-<pre>
-        module component_composite_name {
-          composition service component_home_executor {
-            implements component_home;
-            manages component_executor;
-          };
-        };
-</pre>
-        The compiler generates operation implementations
-        inherited from following interfaces:
-        <ul>
-          <li><code>Navigation</code>
-          <li><code>Receptacle</code>
-          <li><code>Event</code>
-          <li><code>CCMObject</code>
-          <li>Component specific context
-          <li>Executor
-        </ul>
-
-    </td>
-  </tr>
-</table><p>
-
-<li><b>TAO Modules required by CIAO:</b>  We currently don't have a
-    target set up in TAO's make system to build CIAO required module
-    only, so you need to do this yourself.  (BTW, we only support the
-    use of dynamic linked libraries, at least for now.) Here is a list
-    of necessary TAO modules in order of dependencies:
-
-    <ol>
-      <li>TAO Main library.
-      <li>PortableServer
-      <li>orbsvcs/orbsvcs/Security
-      <li>IFR_Client
-    </ol><p>
+ <li> CIAO doesn't yet support features that help integrating CORBA
+ components with Enterprise Java Beans (EJB). 
 
 </ol>
 
-<hr>
-<a name="outlook">
-<h2>Project Outlook</h2>
-This to-do list is currently arranged in chronological order,
-<i>i.e.</i>, we group features that are expected to be available in
-certain release together.  All interfaces and types are under
-<CODE>Components</code> module namespace if not specified explicitly.
 
-<ul>
-  <li><b>CIAO 0.1 alpha release</b> - (post TAO 1.3, Dec. 2002)
-      <UL>
-        <li>Default implementation of <code>
-            <ul>
-              <li>Navigations
-              <li>Receptacles
-              <li>Events
-            </ul>
-            </code>
-            interfaces and their supporting data types that
-            <code>CCMObject</code> interface requires.  These
-            interfaces are defined in <code>
-            <a href="../../ciao/CIAO_Base.idl">CCM_Base.idl</a></code>
-            and <code><a
-            href="../../ciao/CIAO_Event.idl">CCM_Event.idl</a></code>.
-        <li>Default implementation of <code>
-            <ul>
-              <li>CCMObject
-              <li>CCMHome
-              <li>KeylessCCMHome
-            </ul>
-            </code> and their supporting data types as defined in part
-            of the <code><a href="../../ciao/CCM_Component.idl">
-            CIAO_Component.idl </a></code>.
-        <li>Partial support for basic container/callback interfaces: <code>
-            <ul>
-              <li>CCMContext, SessionContext
-              <li>EnterpriseComponent, SessionComponent
-            </ul>
-            </code>
-        <li>Extension to CORBA Core
-            <ul>
-              <li><code>CORBA::LocalObject</code> interface has been
-                  added a long time ago.
-              <li><code>get_component()</code> method in
-                  <code>CORBA::{Object|LocalObject}</code>
-                  interfaces.
-            </ul>
-        <li><code>HomeExecutorBase</code> interface
-        <li>Support (hand crafted) monolithic executor implementation
-        <li>Extension to IDL compiler and Typecode factory.  IDL
-            compiler shall recognize all CCM keyword extensions but not
-            necessarily generate code for these added keywords.
-        <li>Adaptive configuration of Notification Service/Event Channels
-        <li>Partial implementation of <code>Deployment</code> module.
-            <!-- support some descriptors -->
-      </UL>
-      AT this stage, we only implement "enough" CCM defined interface
-      capability to allow manual implementation of components and a
-      simple framework that offer some remote installation/composition
-      capability.  This will help design how CCIDL generated code
-      should look like.
-
-      <p>
-
-  <LI><b>CIAO 0.2 beta release</b> - (TAO 1.3.X, Apr. 2003)
-      <ul>
-        <li>Support for various RT and QoS Policies
-        <li>Support for policy-based adaptation mechanism
-        <li><code>HomeFinder</code> interface
-        <li><code>HomeRegistration</code> interface
-        <li>Configuration interfaces <code>
-            <ul>
-              <li>Configurator
-              <li>StandardConfigurator
-              <li>HomeConfiguration
-            </ul>
-            </code>
-        <li>Other basic container programming interfaces <code>
-            <ul>
-              <li>EntityContext
-              <li>EntityComponent
-            </ul>
-            </code>
-        <li>Extension to Interface Repository.
-        <li>IDL should generate correct client/server side mapping for
-            component extension
-        <li>CCIDL implementation that generates skeleton implementation for
-            <ul>
-              <li><code>Navigations</code>, <code>Receptacles</code>,
-                  and <code>Events</code> interfaces of a components
-              <li>component executor and home_executor templates for
-                  monolithic component implementation
-              <li>What else???
-            </ul>
-        <li>Complete <code>Deployment</code> implementation, assuming
-            the revised deployment specification will be available
-            <!-- Support more descriptors -->
-      </ul>
-
-      <p>
-
-  <li><b>CIAO 0.4</b> - (TAO 1.4, Jan 2004)
-      <ul>
-        <li>Usable version of CIAO tested on Linux and Win32.
-        <li>CIDLC supports most of the IDL2 and IDL3 keywords.
-        <li>Simple examples of usage is available in
-        <code>$CIAO_ROOT/examples</code>
-      </ul>
-      <p>
-
-  <li><b>CIAO 0.4.3 beta release</b> - (TAO 1.4.x, July 2004)
-      <ul>
-        <li>Usable version of CIAO with the new DnC implementation
-	    tested on Linux and Win32.
-        <li>Simple examples of usage is available in
-        <code>$CIAO_ROOT/DnC/tests</code>
-      </ul>
-      <p>
-
-</ul>
 
 <b>Email: </b><a href="mailto:"</a<ADDRESS>ciao-users@cse.wustl.edu</ADDRESS>
 </body> </html>
